# byodb

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/byodb/: __init__.py  constants.py  db.py  errors.py  main.py  schema.sql
src/byodb/blueprints/auth/v1/: api.py  models.py
src/byodb/blueprints/databases/: __init__.py
src/byodb/blueprints/databases/v1/: __init__.py  api.py  models.py  utils.py
src/byodb/blueprints/queries/v1/: api.py  models.py
tests/: conftest.py  main_test.py
tests/blueprints/databases/v1/: api_test.py  utils_test.py
tests/blueprints/queries/v1/: api_test.py
